Changelog 1.0.22:
Fixed Background Scraping Display style

Changelog 1.0.21:
Fixed issue with Custom Providers refresh not honoring disabled status (Actually this time)
Added try/except for property/progress updates in getSources module
Fixed issue with source dicts being stringed during source select
Added onClick callback for source select

Changelog 1.0.20:
Fixed Source Select selecting wrong source
Fixed issue with Custom Providers refresh not honoring disabled status

Changelog 1.0.19:
Further adjustments of background overlay to better suit brighter fanart images

Changelog 1.0.18:
Added Overlay to custom windows
Added re-worked versions of artwork
Seren Fanart now applies to all items that are missing fanart

Changelog 1.0.17:
Adjust poster size in Source Select
Added setting "Auto try next link on resolve failure (Source Select)"

Changelog 1.0.16:
Cleaned up and re-worked provider database sync function
Fixed issue with providers not showing on initial install of providers

Changelog 1.0.15:
Local torrent database restructued to increase speeds and handling of entries
Increased visibility of selected item in source select view
Fixed hosters providers not scraping episodes
Hosters now display the release title of the source if available
Re-work of Seren artwork

Changelog 1.0.14:
Fixed Shuffle Play
Adjusted contrast levels for new windows

Changelog 1.0.13:
All custom windows have been migrated over to XML based windows
Tidied code within getSources endpoint
Failure to resolve an item with source select active now returns the user to the source select window
Improvements to trakt bookmarks occuring
Added notification at RD auth to check if users account is premium and advise accordingly
Adjusted Premiumize Automatic Cloud Removal to support new Fair Usage system
Premiumize percentage threshold is now maximum GBs of used storage
Fixed appending seasons to current playlist

Changelog 1.0.12:
Fixed issues with show year returning INT

Changelog 1.0.11: